--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -88,7 +88,6 @@ legend {
 }
 
 /* Header */
-#header { clear: both; float: left }
 #header hr { display: none }
 #header img { border: none; margin: 0 0 -3.5em }
 #header :link, #header :visited, #header :link:hover, #header :visited:hover {
@@ -99,7 +98,7 @@ legend {
 #search {
   clear: both;
   font-size: 10px;
-  margin-bottom: 1em;
+  margin: 0 0 1em;
   text-align: right;
 }
 #search input { font-size: 10px; padding: 1px }
