--- a/htdocs/css/roadmap.css
+++ b/htdocs/css/roadmap.css
@@ -1,5 +1,5 @@
 /* General styles for the progress bars */
-div.progress { float: left; border: 1px inset black }
+div.progress { float: left; border: 1px solid #d7d7d7 }
 div.progress div { background: #bae0ba; height: 1.2em }
 p.percentage { font-size: 10px; line-height: 2.4em }
 
@@ -79,7 +79,16 @@ p.percentage { font-size: 10px; line-height: 2.4em }
 }
 #main.milestone td, #main.milestone th { padding: 0 .25em }
 #main.milestone th { text-align: left }
-#main.milestone td.progress { width: 70% }
+#main.milestone th.tickets, #main.milestone th.open, #main.milestone th.closed,
+#main.milestone td.open, #main.milestone td.closed {
+ text-align: center;
+}
+#main.milestone th.open, #main.milestone th.closed {
+ font-size: smaller;
+ width: 6em;
+}
+#main.milestone td.closed { text-decoration: line-through }
+#main.milestone th.progress { padding-left: 6px; width: 60% }
 #main.milestone td div.progress { margin: 3px .5em 3px 2px }
 #main.milestone td.progress p { font-size: 10px; margin: 3px 0 }
 #main.milestone tbody tr:hover, #main.milestone tbody tr:hover {
