--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -75,3 +75,20 @@
  width: 50%;
 }
 .diff table td.left { border-right: dashed 1px #d7d7d7 }
+#overview {
+ border: 1px solid #d7d7d7;
+ padding: .5em;
+ width: 100%;
+ margin-top: 1em;
+}
+#overview th {
+ padding-right: .5em;
+ text-align: right;
+ width: 8em;
+}
+#overview td,  #overview th {
+ vertical-align: top;
+ background: transparent;
+ color: inherit;
+ border: none;
+}
